--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "clear": "rm -rf dist",
     "start": "npm run build && node dist/index.js",
     "start:container": "docker compose up --build -d",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint src/**/*.ts",
+    "lint:fix": "npx eslint src/**/*.ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,9 @@
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.7.2",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.39.0",
     "module-alias": "^2.2.3",
     "typescript": "^5.6.2"
   },
@@ -29,5 +34,3 @@
     "postgres": "^3.4.7"
   }
 }
-
-
