add bruno collection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       DATABASE_USER: admin
       DATABASE_PASSWORD: admin
       DATABASE_NAME: library
+      ADMIN_USERNAME: admin
+      ADMIN_PASSWORD: admin
     depends_on:
       - database
 
