--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:local": "npm run build && node dist/index.js",
     "start:local:container": "docker compose up --build -d",
     "stop:local:container": "docker compose down",
-    "test:local": "jest --coverage",
+    "test:local": "jest --config jest.unit.config.js --coverage",
+    "test:local:integration": "jest --config jest.integration.config.js --coverage",
     "test:local:e2e": "npm run stop:local:container && npm run start:local:container && mkdir -p artifacts/e2e && cd ./tests/e2e/collection/library_api && sleep 5 && npx bru run --env local --reporter-html results.html && cd ../../../../ && mv ./tests/e2e/collection/library_api/results.html ./artifacts/e2e/results.html && npm run stop:local:container",
     "lint": "npx eslint src/**/*.ts",
     "lint:fix": "npx eslint src/**/*.ts --fix"
@@ -18,6 +19,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@testcontainers/postgresql": "^11.7.2",
     "@types/express": "^5.0.2",
     "@types/jest": "^30.0.0",
     "@types/module-alias": "^2.0.4",
@@ -28,6 +30,7 @@
     "eslint": "^9.39.0",
     "jest": "^30.2.0",
     "module-alias": "^2.2.3",
+    "testcontainers": "^11.7.2",
     "ts-jest": "^29.4.5",
     "typescript": "^5.6.2"
   },
