--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm run build
 
     - name: Run e2e tests
-      run: npm run test:local:e2e
+      run: npm run test:e2e
       env:
         CI: true
 
