--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "library_api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "npm run clear && npx tsc",
     "clear": "rm -rf dist",
