--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,33 +16,93 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Wait for all workflows to complete
+    - name: Wait for all required workflows to complete successfully
       uses: actions/github-script@v7
       with:
         script: |
           const { owner, repo } = context.repo;
           const sha = context.payload.workflow_run.head_sha;
           
-          // Get all workflow runs for this commit
-          const { data: workflowRuns } = await github.rest.actions.listWorkflowRunsForRepo({
-            owner,
-            repo,
-            head_sha: sha,
-            status: 'completed'
-          });
+          console.log(`Checking workflows for commit: ${sha}`);
           
-          // Check if both required workflows have completed successfully
+          // Wait up to 10 minutes for all workflows to complete
+          const maxWaitTime = 10 * 60 * 1000; // 10 minutes in milliseconds
+          const pollInterval = 30 * 1000; // 30 seconds
+          const startTime = Date.now();
+          
           const requiredWorkflows = ['Unit and Integration Tests', 'E2E Tests'];
-          const completedWorkflows = workflowRuns.workflow_runs
-            .filter(run => requiredWorkflows.includes(run.name))
-            .filter(run => run.conclusion === 'success');
           
-          if (completedWorkflows.length !== requiredWorkflows.length) {
-            core.setFailed('Not all required workflows have completed successfully');
-            return;
+          while (Date.now() - startTime < maxWaitTime) {
+            // Get all workflow runs for this commit
+            const { data: workflowRuns } = await github.rest.actions.listWorkflowRunsForRepo({
+              owner,
+              repo,
+              head_sha: sha,
+              per_page: 100
+            });
+            
+            console.log(`Found ${workflowRuns.workflow_runs.length} workflow runs for commit ${sha}`);
+            
+            // Filter for our required workflows
+            const relevantRuns = workflowRuns.workflow_runs
+              .filter(run => requiredWorkflows.includes(run.name))
+              .filter(run => run.head_sha === sha);
+            
+            console.log(`Found ${relevantRuns.length} relevant workflow runs`);
+            
+            // Check status of each required workflow
+            const workflowStatus = {};
+            for (const workflow of requiredWorkflows) {
+              const runs = relevantRuns.filter(run => run.name === workflow);
+              if (runs.length === 0) {
+                workflowStatus[workflow] = 'not_found';
+              } else {
+                // Get the most recent run for this workflow
+                const latestRun = runs.sort((a, b) => new Date(b.created_at) - new Date(a.created_at))[0];
+                workflowStatus[workflow] = {
+                  status: latestRun.status,
+                  conclusion: latestRun.conclusion,
+                  id: latestRun.id
+                };
+              }
+            }
+            
+            console.log('Workflow status:', JSON.stringify(workflowStatus, null, 2));
+            
+            // Check if all workflows are completed
+            const allCompleted = requiredWorkflows.every(workflow => {
+              const status = workflowStatus[workflow];
+              return status !== 'not_found' && status.status === 'completed';
+            });
+            
+            if (allCompleted) {
+              // Check if all workflows succeeded
+              const allSuccessful = requiredWorkflows.every(workflow => {
+                const status = workflowStatus[workflow];
+                return status.conclusion === 'success';
+              });
+              
+              if (allSuccessful) {
+                console.log('✅ All required workflows completed successfully!');
+                return;
+              } else {
+                // Find which workflows failed
+                const failedWorkflows = requiredWorkflows.filter(workflow => {
+                  const status = workflowStatus[workflow];
+                  return status.conclusion !== 'success';
+                });
+                
+                core.setFailed(`❌ The following workflows did not succeed: ${failedWorkflows.join(', ')}`);
+                return;
+              }
+            }
+            
+            console.log('⏳ Waiting for all workflows to complete...');
+            await new Promise(resolve => setTimeout(resolve, pollInterval));
           }
           
-          console.log('All required workflows completed successfully');
+          // Timeout reached
+          core.setFailed('❌ Timeout: Not all required workflows completed within the time limit');
 
     - name: Deploy to Render
       run: |
