--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,12 @@
 name: Deploy to Production
 
 on:
-  workflow_run:
-    workflows: ["Unit and Integration Tests", "E2E Tests"]
-    types:
-      - completed
+  push:
     branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     - name: Checkout code
@@ -21,7 +17,7 @@ jobs:
       with:
         script: |
           const { owner, repo } = context.repo;
-          const sha = context.payload.workflow_run.head_sha;
+          const sha = context.sha;
           
           console.log(`Checking workflows for commit: ${sha}`);
           
@@ -114,6 +110,6 @@ jobs:
       run: |
         echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
         echo "✅ Application deployed to production successfully" >> $GITHUB_STEP_SUMMARY
-        echo "- **Commit SHA:** ${{ github.event.workflow_run.head_sha }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Branch:** ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Commit SHA:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
         echo "- **Deployment Time:** $(date -u)" >> $GITHUB_STEP_SUMMARY
