--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Unit and Integration Tests
+name: CI/CD Pipeline
 
 on:
   push:
@@ -87,3 +87,69 @@ jobs:
         else
           echo "❌ Integration tests failed or coverage report not generated" >> $GITHUB_STEP_SUMMARY
         fi
+
+  e2e-tests:
+    runs-on: ubuntu-latest
+    needs: unit-and-integration-tests
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build project
+      run: npm run build
+
+    - name: Run e2e tests
+      run: npm run test:e2e
+      env:
+        CI: true
+
+    - name: Upload e2e test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: e2e-test-results
+        path: artifacts/e2e/
+        retention-days: 30
+
+    - name: Generate e2e test summary
+      if: always()
+      run: |
+        echo "## E2E Test Results" >> $GITHUB_STEP_SUMMARY
+        if [ -f "artifacts/e2e/results.html" ]; then
+          echo "✅ E2E tests completed with results generated" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "❌ E2E tests failed or results not generated" >> $GITHUB_STEP_SUMMARY
+        fi
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [unit-and-integration-tests, e2e-tests]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Deploy to Render
+      run: |
+        echo "Deploying to production..."
+        curl -X POST "${{ secrets.DEPLOYMENT_URL }}"
+        echo "Deployment webhook triggered successfully"
+
+    - name: Generate deployment summary
+      run: |
+        echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
+        echo "✅ Application deployed to production successfully" >> $GITHUB_STEP_SUMMARY
+        echo "- **Commit SHA:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Deployment Time:** $(date -u)" >> $GITHUB_STEP_SUMMARY
